# chartjs-ocaml

./: .gitignore  .merlin  CHANGES.md  META  Makefile  README.md  TODO.md  axes.ml  bar.mli  chart.mli  chartjs-annotation.opam  chartjs-colorschemes.opam  chartjs-datalabels.opam  chartjs-streaming.opam  chartjs.ml  chartjs.mli  chartjs.opam  chartjs_array.ml  chartjs_array.mli  chartjs_data.ml  chartjs_data.mli  chartjs_option_types.ml  chartjs_options.mli  chartjs_scales.ml  chartjs_scales.mli  chartjs_scales_raw.ml  chartjs_scales_raw.mli  chartjs_types.mli  dune-project  index.html  line.mli  opam  pie.mli
chartjs/: index.html
chartjs-annotation/: index.html
chartjs-annotation/Chartjs_annotation/: index.html
chartjs-colorschemes/: index.html
chartjs-colorschemes/Chartjs_colorschemes/: index.html
chartjs-datalabels/: index.html
chartjs-datalabels/Chartjs_datalabels/: index.html
chartjs-streaming/: index.html
chartjs-streaming/Chartjs_streaming/: index.html
chartjs/Chartjs/: index.html
datalabels/: _dune  chartjs_datalabels.mli
examples/: basic.ml  dune  index.html
examples/bar/: bar.js  bar.ml
examples/bar/.bar.eobjs/: bar.pp.ml.d
examples/bar/.bar.eobjs/byte/: bar.cmt
examples/line/: line.js  line.ml
examples/line/.line.eobjs/: line.pp.ml.d
examples/line/.line.eobjs/byte/: line.cmt
examples/pie/: index.html  pie.js  pie.ml
examples/pie/.pie.eobjs/: pie.pp.ml.d
examples/pie/.pie.eobjs/byte/: pie.cmt
examples/timescale/: timescale.js  timescale.ml
examples/timescale/.timescale.eobjs/: timescale.pp.ml.d
examples/timescale/.timescale.eobjs/byte/: timescale.cmt
lib/: bar.mli  chart.mli  chartjs.ml  chartjs.mli  data.mli  dune  indexable.ml  js_array.ml  line.mli  option_types.mli  options.mli  pie.mli  scales.ml  scales_raw.mli  scriptable.ml  types.ml  types.mli
lib/trash/: chartjs.mli  line.mli  scales.ml  scales.mli  scales_raw.mli
plugins/annotation/: chartjs_annotation.ml
plugins/colorschemes/: chartjs_colorschemes.ml  chartjs_colorschemes.mli
streaming/: _dune  chartjs_streaming.mli
(+127 files in other folders)
